--- a/automation/poc-oneok.yaml
+++ b/automation/poc-oneok.yaml
@@ -40,6 +40,7 @@
          - add bgp network 172.16.0.4/31
          - add ospf router-id 10.19.241.1
          - add ospf network 172.17.0.0/30 area 0.0.0.0
+	 - add ospf redistribute bgp metric 100
          - add bgp redistribute ospf metric 100
 
        commit: true
@@ -62,7 +63,8 @@
          - add bgp network 172.16.0.4/31
          - add ospf router-id 10.19.241.2
          - add ospf network 172.17.0.4/30 area 0.0.0.0
-         - add bgp redistribute ospf metric 200
+	 - add ospf redistribute bgp metric 100
+         - add bgp redistribute ospf metric 100
 
        commit: true
 
